--- a/src/index.less
+++ b/src/index.less
@@ -1,3 +1,9 @@
-.text {
-  background-color: red;
+html,body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+#root{
+  width: 100%;
+  height: 100%;
 }
